(GNAT_VERSION): Removed. (XMLADA): Fix comment and default value. (DLL2DEF): Removed. Reorganize the file to have the more important settings at the top of the file.

--- a/makefile.conf
+++ b/makefile.conf
@@ -3,15 +3,28 @@
 #
 # This makefile includes all variables used to configure AWS. You can update
 # variables here and should not have do change the main makefile.
+#
+# IMPORTANT: each time you change the definitions here make sure you run
+#            $ make setup
 
 ##############################################################################
-# GNAT Version used to build AWS. Note that this is only to select the right
-# compiler options as some were not present on 3.15 but are on 3.16. By
-# setting this to 3.15 by default only a set of checks is not done but this
-# will not in any way removes some AWS features. Developpers MUST properly set
-# this to have full style checks on before doing a check-in.
+# AWS will be installed under $(INSTALL)/AWS. Update this variable to point to
+# the install directory.
+INSTALL	 = $(HOME)
+
+##############################################################################
+# XMLADA optional, needed if you want to build SOAP's AWS support. Uncomment
+# line above to activate XML/Ada support, you must also set ADA_PROJECT_PATH
+# to point to the XML/Ada project files.
 #
-GNAT_VERSION = 3.15
+#XMLADA	= true
+
+##############################################################################
+# ASIS optional, needed if you want to build ada2wsdl tool. This tool can be
+# used to create a WSDL document from an Ada spec. ASIS must point to the
+# asis sources. Note that you also need to activate XMLADA above.
+#
+#ASIS	 = /opt/gnatpro/5.01a/lib/asis
 
 ##############################################################################
 # Adasockets, optional. AWS use GNAT.Sockets as the default socket package. If
@@ -19,19 +32,6 @@ GNAT_VERSION = 3.15
 # set it to point to the AdaSockets install directory.
 #
 #ADASOCKETS = /opt/adasockets
-
-##############################################################################
-# XMLADA optional, needed if you want to build SOAP's AWS support. In this
-# case uncomment XMLADA variable and set it to point to the XMLADA install
-# directory.
-#
-#XMLADA	 = /opt/xmlada
-
-##############################################################################
-# ASIS optional, needed if you want to build ada2wsdl tool. This tool can be
-# used to create a WSDL document from an Ada spec.
-#
-#ASIS	 = /opt/GNATPRO/lib/asis
 
 ##############################################################################
 # POSIX optional, needed if you want to build AWS using the POSIX version of
@@ -76,18 +76,12 @@ endif
 #GDB_REGTESTS = 1
 
 ##############################################################################
-# AWS will be installed under $(INSTALL)/AWS. Update this variable to point to
-# the install directory.
-INSTALL	 = $(HOME)
-
-##############################################################################
 # Tools used by AWS
 AR 		  = ar
 AWK               = awk
 CHMOD	 	  = chmod
 CP	 	  = cp -p
 DIFF	 	  = diff
-DLL2DEF		  = dll2def
 DLLTOOL	 	  = dlltool
 GCC               = gcc
 GCC_FOR_HOST      = gcc
