(MODE): Renamed SOCKET.

--- a/makefile.conf
+++ b/makefile.conf
@@ -41,16 +41,16 @@ INSTALL	 = $(HOME)
 
 ##############################################################################
 # AWS supports SSL (Secure Socket Layer). The SSL support is always built-in
-# AWS. To build AWS's demos will SSL support you need to set MODE to ssl, in
+# AWS. To build AWS's demos will SSL support you need to set SOCKET to ssl, in
 # this case you must have installed OpenSSL on you computer. OpenSSL libraries
 # are distributed on Windows platforms therefore the SSL mode is the default
 # on this platform.
-# MODE = [ssl/std]
+# SOCKET = [ssl/std]
 #
 ifeq (${OS}, Windows_NT)
-MODE=ssl
+SOCKET=ssl
 else
-MODE=std
+SOCKET=std
 endif
 
 ##############################################################################
