--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -9,9 +9,8 @@ append
 append.res
 append_sec.res
 attachment.res
-auth
-auth.res
-auth.tmp
+auth1
+auth1.res
 auth2
 auth2.res
 b~afile.adb
@@ -110,8 +109,8 @@ b~sock1.adb
 b~sock1.ads
 b~sp.adb
 b~sp.ads
-b~split.adb
-b~split.ads
+b~split1.adb
+b~split1.ads
 b~ssback.adb
 b~ssback.ads
 b~sslcfg.adb
@@ -254,8 +253,8 @@ dirop.tmp
 disp_soap
 disp_soap.res
 disp_soap_sec.res
-dispatch
-dispatch.res
+dispatch1
+dispatch1.res
 dispatch_method
 dispatch_method.res
 dispatch_vh
@@ -303,13 +302,6 @@ googlesearchservice.ads
 head
 head.res
 head.tmp
-hello_demo-client.adb
-hello_demo-client.ads
-hello_demo-server.adb
-hello_demo-server.ads
-hello_demo-types.adb
-hello_demo-types.ads
-hello_demo.ads
 hload.res
 hload_sec.res
 hostip
@@ -328,8 +320,8 @@ interoplab-server.ads
 interoplab-types.adb
 interoplab-types.ads
 interoplab.ads
-interoplab_main
-interoplab_main.res
+interoplab_main1
+interoplab_main1.res
 moved
 moved.res
 moved.tmp
@@ -345,6 +337,13 @@ param
 param.res
 param.tmp
 plain2ssl.res
+r_hello_demo-client.adb
+r_hello_demo-client.ads
+r_hello_demo-server.adb
+r_hello_demo-server.ads
+r_hello_demo-types.adb
+r_hello_demo-types.ads
+r_hello_demo.ads
 redirect
 redirect.res
 redirect.tmp
@@ -397,8 +396,8 @@ sockto.res
 sp
 sp.res
 sp.tmp
-split
-split.res
+split1
+split1.res
 ssback
 ssback.res
 sslcfg.res
