--- a/ssl/makefile
+++ b/ssl/makefile
@@ -3,8 +3,12 @@
 
 .SILENT:
 
-
 force:
+
+ifneq (${OS}, Windows_NT)
+SSL_PATH1 := $(shell ls /usr/lib/libcrypto.a 2> /dev/null)
+SSL_PATH2 := $(shell ls /lib/libcrypto.a 2> /dev/null)
+endif
 
 build:
 	$(GNATMAKE) -Pssl -XSOCKET=${SOCKET} \
@@ -14,10 +18,18 @@ build:
 setup_ssl:
 	echo "project SSL_Shared is" > ssl_shared.gpr
 	echo "   for Source_Files use ();" >> ssl_shared.gpr
+ifeq (${SOCKET}, std)
+	echo '   LIB_Path := "";' >> ssl_shared.gpr
+else
 ifeq (${OS}, Windows_NT)
 	echo '   LIB_Path := "../lib";' >> ssl_shared.gpr
 else
-	echo '   LIB_Path := "/usr/lib";' >> ssl_shared.gpr
+ifneq (${SSL_PATH1},)
+	echo '   LIB_Path := "'$(dir $(SSL_PATH1))'";' >> ssl_shared.gpr
+else
+	echo '   LIB_Path := "'$(dir $(SSL_PATH2))'";' >> ssl_shared.gpr
+endif
+endif
 endif
 	echo "end SSL_Shared;" >> ssl_shared.gpr
 
