(AI302): New variable set to Internal or External (Internal by default). Used  to configure AWS to use either the packaged AI302 components or an external  installation (in this case ADA_PROJECT_PATH must be set properly). (CAT): New variable.

--- a/makefile.conf
+++ b/makefile.conf
@@ -54,6 +54,13 @@ SOCKET=std
 endif
 
 ##############################################################################
+# Whether AWS must use the integrated AI302 components or should use an
+# external copy of them. If External is set be sure to set ADA_PROJECT_PATH to
+# point to the AI302 project file.
+# AI302 = [Internal/External]
+AI302=Internal
+
+##############################################################################
 # AWS provides a binding to the LDAP API. This binding will use the standard
 # LDAP DLL provided with Windows OS. On GNU/Linux you need to install OpenLDAP
 # if it is not already installed. If LDAP is installed on your system you can
@@ -95,3 +102,4 @@ RM	 	  = rm
 SED	 	  = sed
 TAR	 	  = tar
 WINDRES	 	  = windres
+CAT		  = cat
