--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -685,6 +685,7 @@ zres.res
 zresres-file1_txt.ads
 zresres-file2_txt.ads
 zresres-file_tmplt.ads
+zresres-filez_tmplt.ads
 zresres.adb
 zresres.ads
 zstrm
